OPENDJ-2994 Readme needs updating now on GitHub.
PR-461 Comments addressed.